add connection string to the configeration file

--- a/BookSiteServer/appsettings.json
+++ b/BookSiteServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BookSiteConnectionString": "server=DESKTOP-1G3ODQ5;database=BookSiteDB;Trusted_connection=True;TrustServerCertificate=True;Encrypt=True;Integrated Security=True"
+  }
 }
